--- a/SmartContactManager/src/main/resources/application.properties
+++ b/SmartContactManager/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=SmartContactManager
+server.port=8080
+
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/scm
+spring.datasource.url=jdbc:mysql://localhost:3306/scm
+spring.datasource.username=root
+spring.datasource.password=Pranav510@
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
