--- a/SmartContactManager/src/main/resources/application.properties
+++ b/SmartContactManager/src/main/resources/application.properties
@@ -17,6 +17,9 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2MB
 
-spring.servlet.multipart.max-file-size=-1
-spring.servlet.multipart.max-request-size=-1
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
