--- a/AngularJS/emailgui/angular.json
+++ b/AngularJS/emailgui/angular.json
@@ -26,10 +26,13 @@
                 "input": "public"
               }
             ],
+            
+
             "styles": [
-              "@angular/material/prebuilt-themes/azure-blue.css",
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
+
             "scripts": [],
             "server": "src/main.server.ts",
             "outputMode": "server",
@@ -91,8 +94,8 @@
               }
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": []
           }
@@ -101,6 +104,9 @@
     }
   },
   "cli": {
-    "analytics": false
+    "analytics": "460ef3cc-58b1-443b-8cee-dd06e78e6a77"
   }
 }
+
+
+
