--- a/JWT_Authentication_Server/src/main/resources/application.properties
+++ b/JWT_Authentication_Server/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=JWT_Authentication_Server
+
+spring.datasource.url=jdbc:mysql://localhost:3306/loginapp
+spring.datasource.username=root
+spring.datasource.password=Pranav510@
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+
+
+
+
+
+
+
