--- a/SmartContactManager/pom.xml
+++ b/SmartContactManager/pom.xml
@@ -38,6 +38,11 @@
 			<version>3.0.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
