--- a/SmartContactManager/pom.xml
+++ b/SmartContactManager/pom.xml
@@ -31,6 +31,13 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+	
+	
+		<dependency>
+			<groupId>com.razorpay</groupId>
+			<artifactId>razorpay-java</artifactId>
+			<version>1.3.9</version>
+		</dependency>
 
 		<dependency>
 			<groupId>jakarta.validation</groupId>
