--- a/SpringDataRest/src/main/resources/application.properties
+++ b/SpringDataRest/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=SpringDataRest
+
+spring.datasource.url = jdbc:mysql://localhost:3306/spring_data_rest
+spring.datasource.username=root
+spring.datasource.password=Pranav510@
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.data.rest.basePath=api/
+
+
+
