--- a/BootActuator/src/main/resources/application.properties
+++ b/BootActuator/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=BootActuator
+
+
+#management.endpoints.web.exposure.include=beans, mappings, sessions
+management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.exclude=beans, mappings, sessions
+#management.endpoints.web.base-path=/admin
+management.endpoint.health.show-details=always
+
