--- a/BootMongoDB/src/main/resources/application.properties
+++ b/BootMongoDB/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=BootMongoDB
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mybootmongodb
