--- a/SpringSecurity/pom.xml
+++ b/SpringSecurity/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.5</version>
+		<version>2.7.2</version>
 		<relativePath/>
 	</parent>
 
@@ -17,7 +17,7 @@
 	<description>Spring Security with JWT in Spring Boot 3</description>
 
 	<properties>
-		<java.version>21</java.version>
+		<java.version>14</java.version>
 	</properties>
 
 	<dependencies>
@@ -34,24 +34,19 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- Modern JWT Setup -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt-api</artifactId>
-			<version>0.11.5</version>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.0</version>
 		</dependency>
+
 		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt-impl</artifactId>
-			<version>0.11.5</version>
-			<scope>runtime</scope>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
 		</dependency>
-		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt-jackson</artifactId> <!-- Uses Jackson for JSON parsing -->
-			<version>0.11.5</version>
-			<scope>runtime</scope>
-		</dependency>
+
+
 
 		<!-- MySQL -->
 		<dependency>
