--- a/SpringMultipleDB/src/main/resources/application.properties
+++ b/SpringMultipleDB/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=SpringMultipleDB
+
+#mysql 1st
+spring.datasource.url = jdbc:mysql://localhost:3306/multiple_db
+spring.datasource.username=root
+spring.datasource.password=Pranav510@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+#postgresql 2nd
+second.datasource.url=jdbc:postgresql://localhost:5432/multiple_db
+second.datasource.username=postgres
+second.datasource.password=Pranav510@
+second.datasource.driver-class-name=org.postgresql.Driver
+
+#mongodb 3rd
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=multiple_db
