--- a/Boot_JWT_3/src/main/resources/application.properties
+++ b/Boot_JWT_3/src/main/resources/application.properties
@@ -1,1 +1,27 @@
 spring.application.name=Boot_JWT_3
+
+#mysql
+spring.datasource.url = jdbc:mysql://localhost:3306/jwt_db
+spring.datasource.username=root
+spring.datasource.password=Pranav510@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===============================
+# = Hibernate / JPA Settings   =
+# ===============================
+
+# Dialect helps Hibernate to generate SQL optimized for the particular DB
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Automatically create/update tables based on entities (use carefully in production)
+spring.jpa.hibernate.ddl-auto=update
+
+# Show generated SQL in console (for debugging)
+spring.jpa.show-sql=true
+
+# Format the SQL output nicely
+spring.jpa.properties.hibernate.format_sql=true
+
+#user and password customization
+#spring.security.user.name=Pranav
+#spring.security.user.password=Pranav
